# hive_bot

./: .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
.codex/: config.toml
docs/: milestone01.md
src/hive_bot/: __init__.py  __main__.py  app.py  bot.py  command_registry.py  config.py  logging_config.py
src/hive_bot/commands/: ping.py  server.py
src/hive_bot/pterodactyl/: __init__.py  bridge.py  client.py  models.py
tests/: conftest.py  test_app.py  test_bot.py  test_command_registry.py  test_config.py  test_logging_config.py  test_ping.py  test_pterodactyl.py  test_server_commands.py
