[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-bot"
version = "0.1.0"
description = "A milestone-driven Discord bot project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.19,<2.0",
    "pytest>=8.4,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.15,<1.0",
]

[project.scripts]
hive-bot = "hive_bot.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/hive_bot --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = ["src"]
files = ["src", "tests"]

